--- a/src/styles/components/views/reports/_cash-and-flow.scss
+++ b/src/styles/components/views/reports/_cash-and-flow.scss
@@ -141,6 +141,10 @@
 				}
 			}
 		}
+		.currency-container {
+			width: 100%;
+			text-align: right;
+		}
 		.general-heading {
 			margin-left: 20px;
 			margin-bottom: 30px;
